# django_selenium_test

./: .gitignore  .isort.cfg  .travis.yml  CHANGES.txt  LICENSE.txt  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: main.yml
django_selenium_test/: __init__.py  core.py  integration.py  settings.py
tests/: forms.py  settings.py  urls.py  views.py
tests/templates/: integration.html
tests/tests/: __init__.py  test_01_core.py  test_02_integration.py  test_03_user_autologin.py
