[metadata]
name = django-selenium-test
version = 1.1.0
author = Tom Wiesing
author_email = tkw01536@gmail.com
license = BSD 3-Clause License
description = Write clean Selenium tests in Django
url = https://github.com/tkw1536/django_selenium_test
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Testing

[options]
packages = find:
install_requires =
    django>=3.2,<5.0
    selenium>=2.40
test_suite = tests.tests
